Fall back to repair=true on import failure in import_collection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.4
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Engines - Server Integration
    • Fully Compatible
    • ALL
    • v8.0
    • CookieFloss - 29/10/24, Party@Gregs - 2024-11-12
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      WT-13670 implements a flag that will ensure WT does not panic when the collection metadata is invalid on import_collection.

      When doing the production import_collection we should pass `panic_corrupt=false`, catch the error and retry with the config `repair=true`

            Assignee:
            Aaron Balsara
            Reporter:
            Aaron Balsara
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: