SERVER-96166 Fall back to repair=true on importCollection error (#28509)

GitOrigin-RevId: 881810010134d8af33b35d94619d5c75abb154eb